Make sure the bottom fo the document view is visible.

--- a/public/less/designview/documentview.less
+++ b/public/less/designview/documentview.less
@@ -115,3 +115,7 @@
     top:50%;
     left:50%;
 }
+
+.design-view-document-pages {
+    margin-bottom: 90px;
+}
